--- a/package.json
+++ b/package.json
@@ -2,14 +2,23 @@
   "name": "replicate-demo",
   "version": "0.1.0",
   "private": true,
+  "author": {
+    "name": "thirunavukkarasu",
+    "url": "https://thirunavukkarasu.com/"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "turbo": "next dev --turbo",
     "start": "next start",
-    "lint": "next lint"
+    "preview": "next build && next start",
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.2.0",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.1.1",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-menubar": "^1.0.3",
@@ -20,26 +29,37 @@
     "@radix-ui/react-toast": "^1.1.4",
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-tooltip": "^1.0.6",
-    "@types/node": "20.5.0",
-    "@types/react": "18.2.20",
-    "@types/react-dom": "18.2.7",
+    "@t3-oss/env-nextjs": "^0.6.1",
     "ai": "^2.2.6",
-    "autoprefixer": "10.4.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
-    "eslint": "8.47.0",
-    "eslint-config-next": "13.4.16",
     "lucide-react": "^0.268.0",
     "next": "13.4.16",
-    "postcss": "8.4.28",
+    "next-auth": "^4.23.1",
+    "nodemailer": "^6.9.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.4",
     "replicate": "^0.16.1",
     "tailwind-merge": "^1.14.0",
-    "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.6",
-    "typescript": "5.1.6",
-    "zod": "^3.22.1"
+    "zod": "^3.22.2"
+  },
+  "devDependencies": {
+    "@types/node": "20.5.0",
+    "@types/react": "18.2.20",
+    "@types/react-dom": "18.2.7",
+    "autoprefixer": "10.4.15",
+    "eslint": "8.47.0",
+    "eslint-config-next": "13.4.16",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-tailwindcss": "^3.11.0",
+    "husky": "^8.0.3",
+    "postcss": "8.4.28",
+    "prettier": "^2.8.8",
+    "prisma": "^5.1.1",
+    "tailwindcss": "3.3.3",
+    "typescript": "5.1.6"
   }
 }
