--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "ai": "^2.2.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "dotenv": "^16.3.1",
     "lucide-react": "^0.268.0",
     "next": "13.4.16",
     "next-auth": "^4.23.1",
