--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "scripts/train-sdxl.mjs"
+    "scripts/*.mjs"
   ],
   "exclude": ["node_modules"]
 }
